<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/upc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/scan" />

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/upc_lookup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:enabled="false"
        android:padding="18dp"
        android:text="@string/lookup_upc" />

    <TextView
        android:id="@+id/resultLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:visibility="gone"
        android:layout_margin="8dp"
        android:textSize="16sp"
        android:text="@string/searchResults" />

    <TextView
        android:id="@+id/resultData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:layout_weight="1" />
</LinearLayout>